# CNTools

./: .gitignore  LICENSE  MANIFEST.in  README.md  dataset.py  env.yml  identify.py  load.py  pyproject.toml  run_identify.sh  run_load.sh  setup.py
analysis/: Assembly_Rule_Identification.ipynb  CN_Combination_Map.ipynb  CT_Enrichment.ipynb  Differential_CN_Enrichment.ipynb  Inter_CN_Communication_Network.ipynb  Tensor_Decomposition.ipynb  visualize.ipynb
cn/CRC/CNE/: cns_n_cns=9_eta=2.0_max_neighbors=-1_exclude_cts=[]_seed=0.pkl  cns_n_cns=9_eta=2.0_max_neighbors=-1_exclude_cts=[]_seed=0_HMRF_40.0_9.0.pkl  cns_n_cns=9_eta=2.0_max_neighbors=-1_exclude_cts=[]_seed=0_Naive_3.pkl
cn/T2D/CFIDF/: cns_original.pkl
cn/T2D/CNE/: cns_n_cns=6_eta=2.0_max_neighbors=-1_exclude_cts=[]_seed=0.pkl  cns_n_cns=6_eta=2.0_max_neighbors=-1_exclude_cts=[]_seed=0_HMRF_45.0_9.0.pkl  cns_n_cns=6_eta=2.0_max_neighbors=-1_exclude_cts=[]_seed=0_Naive_3.pkl
cntools/datasets/: __init__.py  make_ds.py  prep.py
cntools/identification/: CC.py  CFIDF.py  CNE.py  Spatial_LDA.py  base.py
cntools/smoothing/: HMRF.py  NaiveSmooth.py  __init__.py  base.py
cntools/utils/: kmeans_reg.py  utils.py
identification/: CC.py  CFIDF.py  CNE.py  Spatial_LDA.py  __init__.py
preprocessing/: CRC.py  HLT.py  T2D.py  __init__.py
smoothing/: HMRF.py  Naive.py  __init__.py
src/CNTools/datasets/: __init__.py  make_ds.py  prep.py
src/CNTools/identification/: Spatial_LDA.py
src/CNTools/smoothing/: NaiveSmooth.py
src/CNTools/utils/: __init__.py  _k_means_lloyd_reg.pyx  kmeans_reg.py  utils.py
tests/: test_crc.ipynb  test_hlt.ipynb  test_t2d.ipynb
tests/analysis/: Assembly_Rule_Identification.ipynb  CN_Combination_Map.ipynb  CT_Enrichment.ipynb  Differential_CN_Enrichment.ipynb  Inter_CN_Communication_Network.ipynb  Tensor_Decomposition.ipynb  general.py  visualize.ipynb
tests/analysis_res/CRC/CC/: CRC_CC.tif
tests/analysis_res/CRC/CC_ori/: CRC_CC_ori.tif
tests/analysis_res/CRC/CF-IDF/: CRC_CF-IDF.tif
tests/analysis_res/CRC/CNE/: CRC_CNE.tif  CRC_CNE_decomp_sens.tif  CRC_CNE_diff_sens.tif  CRC_CNE_enrich_sens.tif  CRC_CNE_net_sens.tif  net_pos_perp=15.pkl  net_stats_perp=10.pkl  net_stats_perp=12.5.pkl  net_stats_perp=15.pkl  net_stats_perp=17.5.pkl  net_stats_perp=20.pkl
tests/analysis_res/CRC/ClusterNet/: CRC_ClusterNet.tif
tests/analysis_res/CRC/GAP/: CRC_GAP.tif
tests/analysis_res/CRC/Spatial LDA/: CRC_Spatial_LDA.tif
(+111 files in other folders)
