[project]
name = "cntools"
version = "2.0.3"
description = "A package for identifying cellular neighborhoods"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["cellular neighborhoods"]
authors = [
    {name = "Yicheng Tao", email = "yctao@umich.edu" }
]
maintainers = [
    {name = "Yicheng Tao", email = "yctao@umich.edu" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cython==3.0.7",
    "gdown==4.6.4",
    "jupyter==1.0.0",
    "matplotlib==3.4.2",
    "networkx==2.6.2",
    "numpy==1.20.3",
    "pandas==1.2.4",
    "pip==23.2.1",
    "pydot==1.4.2",
    "python-louvain==0.15",
    "scikit-learn==0.24.2",
    "scipy==1.6.2",
    "seaborn==0.11.2",
    "shapely==1.8.4",
    "statsmodels==0.12.2",
    "tensorly==0.5.1",
    "tqdm==4.62.1",
    "spatial-lda==0.1.3",
]

[project.urls]
Homepage = "https://github.com/liu-bioinfo-lab/CNTools"
Issues = "https://github.com/liu-bioinfo-lab/CNTools/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel", "cython==3.0.7", "scikit-learn==0.24.2", "numpy==1.20.3"]
build-backend = "setuptools.build_meta"